<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <GVL Name="GVL_ModbusTCP_Constants" Id="{329817a7-0510-4e6f-ab47-641a1d18bde3}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	iErrorLimit					: INT	:= 5;				// Maximum number of errors in communication area until error signal will be on
	iQueLimit					: UINT 	:= 25;				// Maximum amount of records in que
	iCommuniactionHistoryLimit	: UINT 	:= 30;				// Maximum amount of data noted in communication history
	iReadRegisterLimit			: UINT 	:= 100;				// Maximum amount of registers that can be read
	iWriteRegisterLimit			: UINT 	:= 100;				// Maximum amount of registers that can be written
	tModbusCommunicationTimeOut	: TIME 	:= T#150MS;			// Maximum time for modbus block timeout
	rTimeForSecondStatistic		: REAL	:= 1;				// Time of 1 [s] for statistic
	rTimeForMinuteStatistic		: REAL	:= 60;				// Time of 60 [s] for statistic
	iCommunicationErrorHistory	: UINT	:= 30;				// Maximum amount of error history
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>